# task_manager

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.mcp  Dockerfile.ui  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
app/: agent.py  main.py
app/api/schema/: task.py
app/database/model/: task.py
mcp_server/: mcp_server.py
ui/: streamlit_app.py
