[project]
name = "task-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.135.0",
    "fastmcp>=3.0.2",
    "langchain>=1.2.10",
    "langchain-ollama>=1.0.1",
    "scalar-fastapi>=1.6.2",
    "sqlmodel>=0.0.37",
]
