[project]
name = "mcp-practise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[all]>=0.135.1",
    "langchain>=1.2.10",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "mcp>=1.26.0",
    "scalar-fastapi>=1.6.2",
    "sqlmodel>=0.0.37",
    "streamlit>=1.43.0",
    "requests>=2.32.0",
]
