[project]
name = "task-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
api = [
    "fastapi[all]>=0.135.1",
    "langchain>=1.2.10",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "scalar-fastapi>=1.6.2",
    "sqlmodel>=0.0.37",
    "python-dotenv>=1.0.0",
]
mcp = [
    "mcp>=1.26.0",
]
ui = [
    "streamlit>=1.43.0",
    "requests>=2.32.0",
]
